--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yousef615.github.io/Android-Calculator-",
   "dependencies": {
     "cra-template": "1.2.0",
+    "mathjs": "^14.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1"
