--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "expr-eval": "^2.0.2",
     "mathjs": "^14.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
